--- a/AutomationProject2024/AutomationProject2024.csproj
+++ b/AutomationProject2024/AutomationProject2024.csproj
@@ -60,10 +60,35 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MagentoTests.cs" />
+    <Compile Include="PageObjectModel\CookieConsent.cs" />
+    <Compile Include="PageObjectModel\HomePage.cs" />
+    <Compile Include="PageObjectModel\LoginPage.cs" />
+    <Compile Include="PageObjectModel\MenuItems.cs" />
+    <Compile Include="PageObjectModel\MenuItemsBeforeSignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestData\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="TestData\ValidationText.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ValidationText.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\ValidationText.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ValidationText.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
