--- a/AutomationProject2024/AutomationProject2024.csproj
+++ b/AutomationProject2024/AutomationProject2024.csproj
@@ -65,6 +65,8 @@
     <Compile Include="PageObjectModel\LoginPage.cs" />
     <Compile Include="PageObjectModel\MenuItems.cs" />
     <Compile Include="PageObjectModel\MenuItemsBeforeSignIn.cs" />
+    <Compile Include="PageObjectModel\ProductDetails.cs" />
+    <Compile Include="PageObjectModel\WatchesPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestData\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
